--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.0",
@@ -25,6 +26,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "tailwindcss": "^3.3.3"
   }
 }
