--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "bootstrap": "^5.3.1",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
