--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.0",
