--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.0",
