--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
+    "express-session": "^1.17.3",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.0",
