--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@craco/craco": "^7.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
+    "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
+    "helmet": "^7.0.0",
     "mysql2": "^3.6.0",
     "node.js": "^0.0.1-security",
     "sequelize": "^6.32.1"
