--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "bootstrap": "^5.3.1",
+    "controllers": "^0.0.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "express.js": "^1.0.0",
     "handlebars": "^4.7.8",
+    "helpers": "^0.0.6",
     "mysql2": "^3.6.0",
     "node.js": "^0.0.1-security",
     "sequelize": "^6.32.1"
