--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   },
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
-    "@craco/craco": "^7.1.0",
+    "@craco/craco": "^5.9.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
+    "connect-session-sequelize": "^7.1.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "express.js": "^1.0.0",
@@ -31,6 +37,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "sequelize-cli": "^6.6.1",
     "tailwindcss": "^3.3.3"
   }
