--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/SnubStumpy2007/Project-Two#readme",
   "dependencies": {
-    "bcrypt": "5.1.1",
     "@craco/craco": "^7.1.0",
+    "bcrypt": "5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
+    "destroy": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
