--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,7 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "zelda12345",
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "JJAWSDB_URL",
     "dialect": "mysql"
   }
 }
