--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JJAWSDB_URL",
+    "username": "root",
+    "password": "zelda12345",
+    "database": "database_production",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
